--- a/src/queue/views/html/sidebar.css
+++ b/src/queue/views/html/sidebar.css
@@ -1,48 +1,51 @@
 @reference '../../../html/styles/main.css';
 
-.queue-sidebar {
-  flex-flow: column nowrap;
-  height: 100%;
-  max-height: 100%;
-  border-radius: 8px;
-  background-color: var(--color-abru-dark-6);
-  padding: 8px;
-  display: none;
+@layer components {
+  .queue-sidebar {
+    flex-flow: column nowrap;
+    height: 100%;
+    max-height: 100%;
+    border-radius: 8px;
+    background-color: var(--color-abru-dark-6);
+    padding: 8px;
+    display: none;
 
-  @media (width >= theme(--breakpoint-lg)) {
-    display: flex;
-  }
-
-  .tab {
-    margin: 10px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-
-    .tablink {
-      position: relative;
-
+    @media (width >= theme(--breakpoint-lg)) {
       display: flex;
-      flex-flow: row nowrap;
-      justify-content: center;
+    }
+
+    .tab {
+      margin: 10px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       align-items: center;
-      gap: 4px;
-      padding-bottom: 8px;
 
-      color: var(--color-abru-light-75);
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: normal;
+      .tab-link,
+      .tablink {
+        position: relative;
 
-      &.active::after {
-        content: '';
-        display: block;
-        position: absolute;
-        bottom: 0;
-        width: 66px;
-        left: calc(50% - 33px);
-        border-bottom: 2px solid var(--color-accent);
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        gap: 4px;
+        padding-bottom: 8px;
+
+        color: var(--color-abru-light-75);
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+
+        &.active::after {
+          content: '';
+          display: block;
+          position: absolute;
+          bottom: 0;
+          width: 66px;
+          left: calc(50% - 33px);
+          border-bottom: 2px solid var(--color-accent);
+        }
       }
     }
   }
