--- a/src/hall-of-game/views/html/hall-of-fame.page.css
+++ b/src/hall-of-game/views/html/hall-of-fame.page.css
@@ -1,62 +1,66 @@
-.hof-board {
-  display: grid;
-  grid-template-columns: auto auto 1fr auto;
-  column-gap: 16px;
-  row-gap: 10px;
+@reference '../../../html/styles/main.css';
 
-  padding: 10px 14px;
-
-  background-color: rgba(19, 16, 20, 0.5);
-  color: var(--color-abru-light-75);
-  border-radius: 8px;
-
-  font-size: 20px;
-  font-weight: 500;
-
-  .title {
-    font-size: 24px;
-    font-weight: 700;
-  }
-
-  .hof-record {
-    @apply transition-colors;
-    @apply duration-75;
-
+@layer components {
+  .hof-board {
     display: grid;
-    grid-column: span 4 / span 4;
-    grid-template-columns: subgrid;
-    border-radius: 4px;
-    align-items: center;
-    padding: 0px 8px 0px 0px;
+    grid-template-columns: auto auto 1fr auto;
+    column-gap: 16px;
+    row-gap: 10px;
 
-    &:hover {
-      background-color: color-mix(in srgb, var(--color-abru-light-5) 40%, transparent);
+    padding: 10px 14px;
+
+    background-color: rgba(19, 16, 20, 0.5);
+    color: var(--color-abru-light-75);
+    border-radius: 8px;
+
+    font-size: 20px;
+    font-weight: 500;
+
+    .title {
+      font-size: 24px;
+      font-weight: 700;
     }
 
-    &.is-1st,
-    &.is-2nd,
-    &.is-3rd {
-      padding: 10px 8px 10px 10px;
-    }
+    .hof-record {
+      @apply transition-colors;
+      @apply duration-75;
 
-    &.is-1st {
-      background-color: var(--color-abru-light-15);
+      display: grid;
+      grid-column: span 4 / span 4;
+      grid-template-columns: subgrid;
+      border-radius: 4px;
+      align-items: center;
+      padding: 0px 8px 0px 0px;
+
       &:hover {
-        background-color: color-mix(in hsl, var(--color-abru-light-15), black 2%);
+        background-color: color-mix(in srgb, var(--color-abru-light-5) 40%, transparent);
       }
-    }
 
-    &.is-2nd {
-      background-color: var(--color-abru-light-10);
-      &:hover {
-        background-color: color-mix(in hsl, var(--color-abru-light-10), black 2%);
+      &.is-1st,
+      &.is-2nd,
+      &.is-3rd {
+        padding: 10px 8px 10px 10px;
       }
-    }
 
-    &.is-3rd {
-      background-color: var(--color-abru-light-5);
-      &:hover {
-        background-color: color-mix(in hsl, var(--color-abru-light-5), black 2%);
+      &.is-1st {
+        background-color: var(--color-abru-light-15);
+        &:hover {
+          background-color: color-mix(in hsl, var(--color-abru-light-15), black 2%);
+        }
+      }
+
+      &.is-2nd {
+        background-color: var(--color-abru-light-10);
+        &:hover {
+          background-color: color-mix(in hsl, var(--color-abru-light-10), black 2%);
+        }
+      }
+
+      &.is-3rd {
+        background-color: var(--color-abru-light-5);
+        &:hover {
+          background-color: color-mix(in hsl, var(--color-abru-light-5), black 2%);
+        }
       }
     }
   }
