--- a/src/html/styles/main.css
+++ b/src/html/styles/main.css
@@ -110,109 +110,111 @@
   }
 }
 
-body {
-  background-color: #221d24;
-  background-image: url('/bg.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
-
-@media only screen and (min-width: 1700px) {
+@layer base {
   body {
-    background-image: url('/bg@2x.png');
+    background-color: #221d24;
+    background-image: url('/bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
   }
-}
 
-table,
-.table {
-  thead,
-  .table-header-group {
+  @media only screen and (min-width: 1700px) {
+    body {
+      background-image: url('/bg@2x.png');
+    }
+  }
+
+  table,
+  .table {
+    thead,
+    .table-header-group {
+      color: var(--color-abru-light-75);
+    }
+
+    td,
+    .table-cell {
+      padding: 2px;
+    }
+  }
+
+  label {
+    font-weight: 600;
     color: var(--color-abru-light-75);
   }
 
-  td,
-  .table-cell {
-    padding: 2px;
-  }
-}
-
-label {
-  font-weight: 600;
-  color: var(--color-abru-light-75);
-}
-
-dl {
-  dt {
-    margin-bottom: 4px;
-  }
-}
-
-input[type='text'],
-input[type='number'],
-input[type='url'],
-select,
-textarea {
-  background-color: var(--color-abru-light-5);
-  border-radius: 4px;
-  padding: 4px 8px;
-  color: #ffffff;
-
-  &:disabled {
-    color: var(--color-abru-light-50);
-  }
-}
-
-input[type='range'] {
-  appearance: none;
-  background: transparent;
-
-  &::-webkit-slider-thumb {
-    appearance: none;
+  dl {
+    dt {
+      margin-bottom: 4px;
+    }
   }
 
-  &:focus {
-    outline: none;
-  }
-
-  &::-ms-track {
-    width: 100%;
-    cursor: pointer;
-
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-  }
-
-  &::-webkit-slider-thumb,
-  &::-moz-range-thumb {
-    height: 18px;
-    width: 18px;
-    border-radius: 50%;
-    background-color: var(--color-accent);
-    cursor: pointer;
-    border: none;
-  }
-
-  &:hover::-webkit-slider-thumb,
-  &:hover::-moz-range-thumb {
-    background-color: color-mix(in hsl, var(--color-accent), black 10%);
-  }
-
-  &:focus::-webkit-slider-thumb,
-  &:focus::-moz-range-thumb {
-    border: 1px solid var(--color-accent);
-    outline: 3px solid var(--color-accent);
-    outline-offset: 0.125rem;
-  }
-
-  &::-webkit-slider-runnable-track,
-  &::-moz-range-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
+  input[type='text'],
+  input[type='number'],
+  input[type='url'],
+  select,
+  textarea {
     background-color: var(--color-abru-light-5);
     border-radius: 4px;
+    padding: 4px 8px;
+    color: #ffffff;
+
+    &:disabled {
+      color: var(--color-abru-light-50);
+    }
+  }
+
+  input[type='range'] {
+    appearance: none;
+    background: transparent;
+
+    &::-webkit-slider-thumb {
+      appearance: none;
+    }
+
+    &:focus {
+      outline: none;
+    }
+
+    &::-ms-track {
+      width: 100%;
+      cursor: pointer;
+
+      background: transparent;
+      border-color: transparent;
+      color: transparent;
+    }
+
+    &::-webkit-slider-thumb,
+    &::-moz-range-thumb {
+      height: 18px;
+      width: 18px;
+      border-radius: 50%;
+      background-color: var(--color-accent);
+      cursor: pointer;
+      border: none;
+    }
+
+    &:hover::-webkit-slider-thumb,
+    &:hover::-moz-range-thumb {
+      background-color: color-mix(in hsl, var(--color-accent), black 10%);
+    }
+
+    &:focus::-webkit-slider-thumb,
+    &:focus::-moz-range-thumb {
+      border: 1px solid var(--color-accent);
+      outline: 3px solid var(--color-accent);
+      outline-offset: 0.125rem;
+    }
+
+    &::-webkit-slider-runnable-track,
+    &::-moz-range-track {
+      width: 100%;
+      height: 8px;
+      cursor: pointer;
+      background-color: var(--color-abru-light-5);
+      border-radius: 4px;
+    }
   }
 }
