--- a/src/html/styles/pagination.css
+++ b/src/html/styles/pagination.css
@@ -1,4 +1,5 @@
 @layer components {
+  .pagination-page,
   .page {
     height: 32px;
     min-width: 28px;
@@ -16,10 +17,12 @@
     }
   }
 
+  .pagination-page--active,
   .page--active {
     background-color: var(--color-abru-light-15);
   }
 
+  .pagination-page--disabled,
   .page--disabled {
     color: var(--color-abru-light-15);
     cursor: default;
