--- a/src/players/views/html/style.css
+++ b/src/players/views/html/style.css
@@ -1,214 +1,217 @@
+@reference '../../../html/styles/main.css';
 @import '../../../games/views/html/game-list.css';
 
-.player-group {
-  grid-template-columns: subgrid;
-}
-
-.player-presentation {
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  gap: 10px;
-  border-radius: 8px;
-  padding: 22px;
-  background-color: var(--color-abru-dark-29);
-  color: var(--color-abru-light-75);
-  row-gap: 24px;
-
-  @media (width >= theme(--breakpoint-md)) {
-    grid-auto-flow: row;
-    grid-template-columns: 218px auto auto;
-    justify-items: normal;
-    row-gap: 10px;
-    padding-right: 40px;
+@layer components {
+  .player-group {
+    grid-template-columns: subgrid;
   }
 
-  .player-avatar {
-    grid-row: span 2 / span 2;
-    height: 184px;
-    width: 184px;
-    border-radius: 4px;
-  }
-
-  .player-stats {
+  .player-presentation {
     display: grid;
-    grid-template-columns: auto 1fr;
     align-items: center;
+    justify-items: center;
     gap: 10px;
+    border-radius: 8px;
+    padding: 22px;
+    background-color: var(--color-abru-dark-29);
+    color: var(--color-abru-light-75);
+    row-gap: 24px;
 
     @media (width >= theme(--breakpoint-md)) {
-      grid-auto-flow: column;
-      grid-template-rows: 1fr 1fr;
-      justify-items: center;
-      justify-self: start;
-      column-gap: 24px;
+      grid-auto-flow: row;
+      grid-template-columns: 218px auto auto;
+      justify-items: normal;
+      row-gap: 10px;
+      padding-right: 40px;
+    }
 
-      @media not all and (width >= theme(--breakpoint-lg)) {
-        grid-column: span 2 / span 2;
-        width: 100%;
+    .player-avatar {
+      grid-row: span 2 / span 2;
+      height: 184px;
+      width: 184px;
+      border-radius: 4px;
+    }
+
+    .player-stats {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      align-items: center;
+      gap: 10px;
+
+      @media (width >= theme(--breakpoint-md)) {
+        grid-auto-flow: column;
+        grid-template-rows: 1fr 1fr;
+        justify-items: center;
+        justify-self: start;
+        column-gap: 24px;
+
+        @media not all and (width >= theme(--breakpoint-lg)) {
+          grid-column: span 2 / span 2;
+          width: 100%;
+        }
       }
     }
   }
-}
 
-.player-presentation-link {
-  @apply transition-colors;
-  @apply duration-75;
+  .player-presentation-link {
+    @apply transition-colors;
+    @apply duration-75;
 
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-
-  background-color: var(--color-abru-light-3);
-  color: var(--color-abru-light-75);
-  height: 48px;
-  min-width: 200px;
-
-  border-radius: 4px;
-  padding: 12px 32px;
-
-  font-size: 18px;
-  font-weight: 700;
-  text-transform: uppercase;
-
-  @media (width >= theme(--breakpoint-md)) {
-    min-width: 0;
-  }
-
-  &:hover {
-    background-color: color-mix(in hsl, var(--color-abru-light-3), white 2%);
-  }
-
-  &.compact {
-    min-width: 48px;
-    padding: 12px;
-
-    span {
-      display: none;
-    }
-  }
-}
-
-.player-admin-toolbox {
-  display: grid;
-  grid-template-areas:
-    'captionSkill     captionSkill'
-    'skill            skill'
-    'buttonSave       buttonReset'
-    'captionWinLoss   captionWinLoss'
-    'winLoss          winLoss'
-    'linkEdit         linkEdit';
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-
-  align-items: center;
-  column-gap: 8px;
-  row-gap: 8px;
-  border-radius: 8px;
-  background: var(--color-abru-dark-29);
-  padding: 24px;
-
-  @media (width >= theme(--breakpoint-xl)) {
-    grid-template-areas:
-      'captionSkill  captionSkill captionSkill captionSkill captionSkill captionSkill . captionWinLoss  captionWinLoss  .       . linkEdit'
-      'skill         skill        skill        skill        skill        skill        . winLoss         winLoss         winLoss . linkEdit';
-    grid-template-columns: repeat(6, minmax(0, 2fr)) 4px repeat(3, 2fr) 4px 1fr;
-    align-items: flex-end;
-  }
-
-  .skill-inputs {
-    grid-area: skill;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 4px;
-    align-items: flex-end;
-    min-width: 0;
-
-    @media (width >= theme(--breakpoint-xl)) {
-      flex-wrap: nowrap;
-    }
-
-    .game-class-skill-input {
-      flex-shrink: 1;
-      min-width: 0;
-    }
-  }
-
-  .skill-buttons {
-    display: flex;
-    gap: 4px;
-    flex-shrink: 0;
-
-    &.compact span {
-      display: none;
-    }
-  }
-
-  .caption {
-    font-size: 18px;
-    font-weight: 700;
-    color: var(--color-abru-light-75);
-  }
-
-  .game-result {
-    height: 24px;
-    width: 24px;
-    border-radius: 4px;
-
-    &.win {
-      background-color: var(--color-game-result-win);
-    }
-
-    &.loss {
-      background-color: var(--color-game-result-loss);
-    }
-
-    &.tie {
-      background-color: var(--color-game-result-tie);
-    }
-  }
-
-  .game-count-selection {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: center;
     gap: 8px;
 
-    button {
-      cursor: pointer;
-      display: inline-block;
+    background-color: var(--color-abru-light-3);
+    color: var(--color-abru-light-75);
+    height: 48px;
+    min-width: 200px;
 
-      padding: 4px 8px;
-      border-radius: 4px;
-      color: var(--color-ash);
+    border-radius: 4px;
+    padding: 12px 32px;
 
-      &.selected {
-        background-color: var(--color-abru-light-5);
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+
+    @media (width >= theme(--breakpoint-md)) {
+      min-width: 0;
+    }
+
+    &:hover {
+      background-color: color-mix(in hsl, var(--color-abru-light-3), white 2%);
+    }
+
+    &.compact {
+      min-width: 48px;
+      padding: 12px;
+
+      span {
+        display: none;
       }
     }
   }
 
-  .game-count {
-    display: flex;
-    flex-flow: row nowrap;
+  .player-admin-toolbox {
+    display: grid;
+    grid-template-areas:
+      'captionSkill     captionSkill'
+      'skill            skill'
+      'buttonSave       buttonReset'
+      'captionWinLoss   captionWinLoss'
+      'winLoss          winLoss'
+      'linkEdit         linkEdit';
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+
     align-items: center;
-    justify-content: center;
-    gap: 4px;
+    column-gap: 8px;
+    row-gap: 8px;
+    border-radius: 8px;
+    background: var(--color-abru-dark-29);
+    padding: 24px;
 
-    font-weight: 500;
-
-    .wins {
-      color: var(--color-game-result-win);
+    @media (width >= theme(--breakpoint-xl)) {
+      grid-template-areas:
+        'captionSkill  captionSkill captionSkill captionSkill captionSkill captionSkill . captionWinLoss  captionWinLoss  .       . linkEdit'
+        'skill         skill        skill        skill        skill        skill        . winLoss         winLoss         winLoss . linkEdit';
+      grid-template-columns: repeat(6, minmax(0, 2fr)) 4px repeat(3, 2fr) 4px 1fr;
+      align-items: flex-end;
     }
 
-    .losses {
-      color: var(--color-game-result-loss);
+    .skill-inputs {
+      grid-area: skill;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 4px;
+      align-items: flex-end;
+      min-width: 0;
+
+      @media (width >= theme(--breakpoint-xl)) {
+        flex-wrap: nowrap;
+      }
+
+      .game-class-skill-input {
+        flex-shrink: 1;
+        min-width: 0;
+      }
     }
 
-    .ties {
-      color: var(--color-game-result-tie);
+    .skill-buttons {
+      display: flex;
+      gap: 4px;
+      flex-shrink: 0;
+
+      &.compact span {
+        display: none;
+      }
+    }
+
+    .caption {
+      font-size: 18px;
+      font-weight: 700;
+      color: var(--color-abru-light-75);
+    }
+
+    .game-result {
+      height: 24px;
+      width: 24px;
+      border-radius: 4px;
+
+      &.win {
+        background-color: var(--color-game-result-win);
+      }
+
+      &.loss {
+        background-color: var(--color-game-result-loss);
+      }
+
+      &.tie {
+        background-color: var(--color-game-result-tie);
+      }
+    }
+
+    .game-count-selection {
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+
+      button {
+        cursor: pointer;
+        display: inline-block;
+
+        padding: 4px 8px;
+        border-radius: 4px;
+        color: var(--color-ash);
+
+        &.selected {
+          background-color: var(--color-abru-light-5);
+        }
+      }
+    }
+
+    .game-count {
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: center;
+      gap: 4px;
+
+      font-weight: 500;
+
+      .wins {
+        color: var(--color-game-result-win);
+      }
+
+      .losses {
+        color: var(--color-game-result-loss);
+      }
+
+      .ties {
+        color: var(--color-game-result-tie);
+      }
     }
   }
 }
