--- a/src/queue/views/html/chat.css
+++ b/src/queue/views/html/chat.css
@@ -125,7 +125,33 @@
             }
           }
         }
+
+        .delete-btn {
+          display: none;
+          background: none;
+          border: none;
+          padding: 0 2px;
+          margin-left: 4px;
+          cursor: pointer;
+          color: var(--color-abru-light-50);
+          vertical-align: middle;
+          line-height: 1;
+
+          &:hover {
+            color: var(--color-alert);
+          }
+
+          svg {
+            width: 14px;
+            height: 14px;
+          }
+        }
       }
+    }
+
+    &[data-is-admin] .message-list p.chat-message:hover .delete-btn {
+      display: inline-flex;
+      align-items: center;
     }
   }
 }
